--- a/app/src/sass/nav/_secondary.scss
+++ b/app/src/sass/nav/_secondary.scss
@@ -128,7 +128,7 @@
         display: block;
         text-indent: -$nav-secondary-indent;
         font-weight: normal;
-        max-height: 3.7em;
+        max-height: 4.8em;
         cursor: pointer;
     }
 
